
if (!is_ios && !is_android && !(is_linux && (target_cpu == "x86" || target_cpu == "arm" || target_cpu == "arm64"))) {
  update_target("//base/test:test_support") {
    sources += [
      "//vivaldi/base/test/vivaldi_testinit.cc",
      "//vivaldi/base/test/vivaldi_testinit.h",
      "//vivaldi/base/vivaldi_paths.cc",
      "//vivaldi/base/vivaldi_paths.h",
    ]
  }
}