
update_template_instance("//base:base") {
  if (!defined(sources)) {
    sources = []
  }
  sources += [
    "//vivaldi/base/vivaldi_running.cpp",
    "//vivaldi/base/vivaldi_user_agent.cc",
    "//vivaldi/base/vivaldi_user_agent.h",
    "//vivaldi/base/vivaldi_user_agent_white_list.inc",
  ]
}

update_target("//base:base_static") {
  sources += [
    "//vivaldi/base/vivaldi_switches.cpp",
    "//vivaldi/base/vivaldi_switches.h",
  ]
}
