import("//build/config/ui.gni")

if (!is_android && !is_mac) {
  update_target("//chrome:chrome_initial") {
    deps += [ "//vivaldi/browser:vivaldi_version_info" ]
    if (is_linux && current_cpu == "x86") {
      ldflags += [
        "-z",
        "notext",
      ]
    }
  }
}

if (is_win) {
  update_target("//chrome:main_dll") {
    deps += [
      "//vivaldi/browser:browser",
    ]
  }
}

update_target("//chrome:browser_dependencies") {
  public_deps += [
    "//vivaldi/browser:browser",
  ]
}

if (is_android) {
  update_target("//chrome:chrome_android_core") {
    deps += [
      "//vivaldi/browser:browser",
    ]
  }
}

update_template_instance("//chrome/browser/ui:ui") {
  public_deps += [
    "//components/sessions:sessions",
    "//vivaldi/browser:browser",
  ]
  if (is_mac) {
    public_deps += [ "//vivaldi/browser:init_sparkle" ]
  }
}

update_target("//content/browser:browser") {
  if (use_x11) {
    public_deps += [ "//ui/events/keycodes:x11" ]
  }
  public_deps += [ "//vivaldi/browser:clipboard" ]
}
