
update_template_instance("//chrome/browser:browser") {
  sources += [
    "//vivaldi/browser/menus/vivaldi_menu_enums.h",
    "//vivaldi/browser/shell_integration/vivaldi_shell_integration.h",
    "//vivaldi/browser/shell_integration/vivaldi_shell_integration_linux.cc",
    "//vivaldi/browser/shell_integration/vivaldi_shell_integration_mac.mm",
    "//vivaldi/browser/shell_integration/vivaldi_shell_integration_win.cc",
  ]
  if (is_mac) {
    sources += [
      "//vivaldi/browser/mac/sparkle_util.h",
      "//vivaldi/browser/mac/sparkle_util.mm",
      "//vivaldi/browser/mac/vivaldi_main_menu_builder.h",
      "//vivaldi/browser/mac/vivaldi_main_menu_builder.mm",
    ]
  }
  if (!is_android) {
    sources += [
      "//vivaldi/browser/history/top_sites_convert.cc",
      "//vivaldi/browser/history/top_sites_convert.h",
      "//vivaldi/browser/menus/bookmark_sorter.cc",
      "//vivaldi/browser/menus/bookmark_sorter.h",
      "//vivaldi/browser/menus/bookmark_support.cc",
      "//vivaldi/browser/menus/bookmark_support.h",
      "//vivaldi/browser/vivaldi_session_service.cc",
    ]
  }
  if (is_android) {
    if (!defined(jumbo_excluded_sources)) {
      jumbo_excluded_sources = []
    }
    jumbo_excluded_sources += [
      "android/explore_sites/explore_sites_service_impl.cc",
    ]
  }
}

update_template_instance("//chrome/browser/ui:ui") {
  sources += [
    "//vivaldi/browser/ui/vivaldi_browser_navigator.cc",
    "//vivaldi/browser/ui/vivaldi_browser_navigator.h",
    "//vivaldi/browser/launch_update_notifier.h",
    "//vivaldi/browser/launch_update_notifier_win.cc",
    "//vivaldi/browser/startup_vivaldi_browser.cpp",
    "//vivaldi/browser/startup_vivaldi_browser.h",
    "//vivaldi/browser/ui/viv_tab_contents_synced_tab_delegate.cc",
    "//vivaldi/browser/ui/vivaldi_window_sizer.cc",
  ]
  if (is_posix) {
    sources += [
      "//vivaldi/browser/launch_update_notifier_posix.cc",
    ]
  }
  if (!is_android) {
    sources += [
      "//vivaldi/browser/ui/viv_settings_import_data_handler.cc",
      "//vivaldi/browser/ui/viv_toolbar_actions_model.cc",
      "//vivaldi/sync/vivaldi_browser_synced_window_delegate.cc",
      "//vivaldi/sync/vivaldi_browser_synced_window_delegate.h",
    ]
  }
  if (toolkit_views) {
    sources += [
      "//vivaldi/browser/ui/viv_page_info_bubble_view.cc",
    ]
  }
  if (!defined(jumbo_excluded_sources)) {
    jumbo_excluded_sources = []
  }
  jumbo_excluded_sources += [
    "//vivaldi/browser/ui/vivaldi_browser_navigator.cc",
  ]
}

update_target("//chrome/common:constants") {
  if (is_win) {
    sources += [
      "//vivaldi/browser/win/vivaldi_utils.cc",
      "//vivaldi/browser/win/vivaldi_utils.h",
    ]
  }
}

update_template_instance("//content/public/browser:browser_sources") {
  sources += [
    "//vivaldi/browser/renderer_host/vivaldi_render_widget_host_input_event_router.cc",
    "//vivaldi/browser/renderer_host/devtools/protocol/vivaldi_emulation_handler.cc",
  ]
}