
update_target("//chrome/browser:browser") {
  sources += [
    "//vivaldi/browser/menus/vivaldi_menu_enums.h",
    "//vivaldi/browser/shell_integration/vivaldi_shell_integration.h",
    "//vivaldi/browser/vivaldi_permission_context_base.cc",
    "//vivaldi/browser/vivaldi_profile_impl.cc",
    "//vivaldi/browser/vivaldi_profile_impl.h",
  ]
  if (is_win) {
    sources += [
      "//vivaldi/browser/shell_integration/vivaldi_shell_integration_win.cc",
    ]
  }
  if (is_linux) {
    sources += [
      "//vivaldi/browser/shell_integration/vivaldi_shell_integration_linux.cc",
    ]
  }
  if (is_mac) {
    sources += [
      "//vivaldi/browser/mac/sparkle_util.h",
      "//vivaldi/browser/mac/sparkle_util.mm",
      "//vivaldi/autoupdate/mac/sparkle_updater_delegate.h",
      "//vivaldi/autoupdate/mac/sparkle_updater_delegate.mm",
      "//vivaldi/browser/mac/vivaldi_main_menu_builder.h",
      "//vivaldi/browser/mac/vivaldi_main_menu_builder.mm",
      "//vivaldi/browser/shell_integration/vivaldi_shell_integration_mac.mm",
    ]
  }
  if (!is_android) {
    sources += [
      "//vivaldi/browser/history/top_sites_convert.cc",
      "//vivaldi/browser/menus/bookmark_sorter.cc",
      "//vivaldi/browser/menus/bookmark_sorter.h",
      "//vivaldi/browser/menus/bookmark_support.cc",
      "//vivaldi/browser/menus/bookmark_support.h",
      "//vivaldi/browser/vivaldi_render_view_context_menu.cc",
      "//vivaldi/ui/vivaldi_session_service.cc",
      "//vivaldi/ui/vivaldi_session_service.h",
    ]
  }
  if (is_android) {
    sources += [
      "//vivaldi/browser/android/first_run_android.cc",
      "//vivaldi/browser/android/adblock/adblock_manager.h",
      "//vivaldi/browser/android/adblock/adblock_manager.cc",
      "//vivaldi/browser/android/capture/capture_handler.cpp",
      "//vivaldi/browser/android/capture/capture_handler.h",
      "//vivaldi/browser/android/prefs/vivaldi_preferences_bridge.h",
      "//vivaldi/browser/android/prefs/vivaldi_preferences_bridge.cc",
    ]
  }
}

update_target("//chrome/browser/ui:ui") {
  sources += [
    "//vivaldi/browser/ui/vivaldi_browser_navigator.cc",
    "//vivaldi/browser/ui/vivaldi_browser_navigator.h",
    "//vivaldi/browser/launch_update_notifier.h",
    "//vivaldi/browser/startup_vivaldi_browser.cpp",
    "//vivaldi/browser/startup_vivaldi_browser.h",
    "//vivaldi/browser/ui/viv_tab_contents_synced_tab_delegate.cc",
    "//vivaldi/browser/ui/vivaldi_tab_helpers.cc",
    "//vivaldi/browser/ui/vivaldi_tab_helpers.h",
    "//vivaldi/browser/ui/vivaldi_window_sizer.cc",
  ]
  if (is_win) {
    sources += [
      "//vivaldi/browser/launch_update_notifier_win.cc",
    ]
  }
  if (is_posix) {
    sources += [
      "//vivaldi/browser/launch_update_notifier_posix.cc",
    ]
  }
  if (!is_android) {
    sources += [
      "//vivaldi/browser/ui/vivaldi_browser.cc",
      "//vivaldi/browser/ui/viv_settings_import_data_handler.cc",
      "//vivaldi/sync/vivaldi_browser_synced_window_delegate.cc",
      "//vivaldi/sync/vivaldi_browser_synced_window_delegate.h",
    ]
  }
  if (toolkit_views) {
    sources += [
      "//vivaldi/browser/ui/viv_page_info_bubble_view.cc",
    ]
  }
}

update_target("//chrome/common:constants") {
  if (is_win) {
    sources += [
      "//vivaldi/browser/win/vivaldi_utils.cc",
      "//vivaldi/browser/win/vivaldi_utils.h",
    ]
    deps += [
      "//chrome/installer/util:constants",
    ]
  }
}

update_target("//content/public/browser:browser_sources") {
  sources += [
    "//vivaldi/browser/renderer_host/devtools/protocol/vivaldi_emulation_handler.cc",
  ]
}

if (!is_android) {
  update_target("//components/history/core/browser:browser") {
    sources += [
      "//vivaldi/browser/history/top_sites_convert.h",
    ]
  }
}