# Copyright (c) 2015-2017 Vivaldi Technologies AS. All rights reserved

update_target("//chrome/browser:browser") {
  public_deps += [
    "//vivaldi/calendar",
  ]
  allow_circular_includes_from += [
    "//vivaldi/calendar",
  ]
}

update_target("//chrome:dependencies") {
  public_deps += [ "//vivaldi/calendar" ]
}
