import("//extensions/buildflags/buildflags.gni")

source_set("clientparts") {
  sources = [
    "vivaldi_content_browser_client_parts.cc",
    "vivaldi_content_browser_client_parts.h",
  ]
  deps = [
    "//base:base",
    "//chrome/app/resources:platform_locale_settings",
    "//components/prefs:prefs",
    "//content/public/browser",
    "//skia",
    "//vivaldi/components/request_filter",
    "//vivaldi/prefs",
  ]
  if (enable_extensions) {
    deps += [
      "//extensions/common/api",
      "//vivaldi/extensions/api:apis",
      "//vivaldi/extensions/helper:app_helper",
    ]
  }
}
